# oat-db-rust

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.standalone  INTEGRATION_TESTING.md  README.md  README_POSTGRES.md  docker-compose.integration-test.yml  docker-compose.yml  example_instance_filter.json  init-db.sql  start-standalone.sh
.sqlx/: query-0af04274dc7a6aff8eb61f682226f3a3fa4207ed813fda39917427777ebfe252.json  query-19f7fa6b1d690bbcd831dec03adf1b96fddfbfe2d4301fd9166a8a1f3b080846.json  query-1f29edc2b310370c19469cab8a9dc1275b68c58f56daadbb840fc23255e09d68.json  query-20eec8af1198e464f591e08b7de12658064a2845c091c573bb75e69b3a5c67cd.json  query-262f86d27e492e28f993df287a4022833c176a910312d3b596fc722ba02c3dd2.json  query-2a5cd66994828a11d64293220799b01d29e35ac23121163404b033af7900fde8.json  query-34a9774ddac095ed686505fcc31742492480fac09a0c51bc5118d48a62e2fd8a.json  query-37039054a7083db373e551b24c4a40df50c0d2652d372b9fb7f9593ba85515df.json  query-383e97dfdcbc9fef26ab3a91cde9f5b0a2348922c1ad36d6ff4cb7a3371153f7.json  query-42a401b1c01d3995de4d35174283372ae6f9943505e006f41edb03acf8788929.json  query-44f5a235b083d7271dcf300fa458364aff85ba9215dc5192b16bb825c50eb83f.json  query-45f972d7047f4d6c4fcf6878408b804818262abf7bb89eaa838d2eb64b64da07.json  query-48a9345511a5f519b2208e734557e8038301925490a86eab842fda20eb42a408.json  query-48be81a83edc241300a7d986ada3dde3cb1419c2d2617b89905d09d377ee49df.json  query-5b711bd7d6bcc63450208165efcc27092e186ecf3fea41a1964de92a564bedc5.json  query-5d02e59742e88233fc5204c4c4107a10b4671876c8de6e7e8a7df84b6f7facd0.json  (+16 more)
(+64 files in other folders)
