[package]
name = "oat-db-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
parking_lot = "0.12"
itertools = "0.14"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
# PostgreSQL dependencies
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate", "macros"] }
# Configuration management
config = "0.14"
# Environment variable support
dotenvy = "0.15"
# Logging
env_logger = "0.10"
pldag = { version = "3.0.3", features = ["glpk"] }
glpk-rust = "0.1.5"
# Git-like commit functionality
sha2 = "0.10"  # SHA-256 hashing for commits
hex = "0.4"   # Hex encoding for hashes
flate2 = "1.0"  # Gzip compression for commit data

[[bin]]
name = "migrate-enum-formats"
path = "src/scripts/migrate_enum_formats.rs"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
